[refactor] Revise mechanism to get new class instance using reflection.